Updating RP to fix font/chain link, fixing a bug with [item]